# uv-example

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COMMIT_PREFIXES.md  Dockerfile  README.md  SQLPD.md  check_env.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
scripts/: example.py
src/: main.py
src/api/: routes.py
src/core/: config.py
src/db/: base.py  main.py  session.py
src/models/: user.py
src/services/: user_service.py
tests/: test_users.py
