[project]
name = "uv-example"
version = "0.1.0"
description = "UV Example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic[email]>=2.10.4",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "passlib>=1.7.4",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "bcrypt>=4.2.1",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
src = ["src"]
