[project]
name = "uv-example"
version = "0.1.0"
description = "UV Example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic[email]>=2.10.4",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.36",
    "passlib>=1.7.4",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "bcrypt==4.0.1",
]

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests"]
addopts = "--disable-warnings --verbose"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mdformat>=0.7.21",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]
